fix sosmed icon stackable on mobile, close sosmed icon bug

--- a/style/comingsoon.css
+++ b/style/comingsoon.css
@@ -63,6 +63,10 @@ p {
     text-align: justify;
 }
 
+.j-box {
+    padding: 1em;
+}
+
 /*
  * fullPage Style
  */
@@ -141,6 +145,12 @@ p {
     text-decoration: none;
 }
 
+.sos-kiri {
+    text-align: right;
+}
+.sos-kanan {
+    text-align: left;
+}
 
 /*
  * Small mobile Style
@@ -164,11 +174,20 @@ p {
     .mobile-slide {
         padding-top: 50px;
     }
+
+    #landing {
+        min-width: 100%
+    }
     #landing img {
         margin: 0 auto;
         display: block;
         width: 100%;
     }
+
+    #closing {
+        min-width: 100%;
+    }
+
     #tag-closing h1 {
         font-size: 2.5em;
     }
@@ -176,5 +195,13 @@ p {
     #tag-closing p {
         font-size: 1em;
         font-style: bolder;
+    }
+    .sos-kanan {
+        text-align: center;
+        padding: 5px;
+    }
+    .sos-kiri {
+        text-align: center;
+        padding: 5px;
     }
 }
